Implement user authentication for mobile application
1. Activate user using email and token sent to email
2. Login using authentication token sent to email
3. Change pin and login using pin
4. Log out
